<resources>
    <string name="app_name">Let\'s Travel</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="required_login">로그인이 필요합니다.</string>

    <string name="kakao_app_key">ab7cad5e90bb8d9380e52c83ac51ce85</string>
    <string name="kakao_scheme_app_key">kakaoab7cad5e90bb8d9380e52c83ac51ce85</string>
    <string name="naver_client_id">J8WIOwga5BSn7z8rSzv0</string>
    <string name="naver_client_secret">Wh_0nUWpwB</string>
    <string name="naver_client_name">Naver 로그인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_test_bottom_nav">TestBottomNavActivity</string>
    <string name="title_information">주변</string>
    <string name="title_save">저장</string>
    <string name="title_transport">대중교통</string>
    <string name="title_mypage">주변 장소</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">지도에 현재 위치를 표시하는 \'내 위치\' 기능을 사용하기 위해서 위치 서비스에 대한 액세스가 필요합니다.</string>
    <string name="location_permission_denied">내 위치를 활성화하기 위해 위치 권한이 필요합니다. 다시 시도하고 위치를 사용할 수 있는 액세스 권한을 부여하세요.\n권한이 영구적으로 거부된 경우 시스템 설정 &gt; 앱 &gt; \'Let\'s Travel\'.</string>
    <string name="permission_required_toast">이 어플에는 위치 권한이 필요합니다.</string>

    <!--    Information SearchView    -->
    <string name="search_text">식당, 숙소, 버스 등 검색</string>
    <string name="search_cancel">취소</string>
    <string name="option_get_place">Get place</string>

    <string name="default_info_title">기본 위치</string>
    <string name="default_info_snippet">위치 권한이 비활성화되어 있어 장소를 찾을 수 없습니다.</string>
    <string name="save_count">개수</string>
    <string name="save_count_max">/500</string>
    <string name="save_text_group">그룹</string>
    <string name="save_text_default_group">기본 그룹</string>
    <string name="save_text_max">/500</string>
    <string name="save_text_count">개수</string>
    <string name="add_text">새 그룹 추가</string>
    <string name="add_title_text_hint">그룹명을 입력해 주세요.</string>
    <string name="add_desc_text_hint">설명을 입력해 주세요.</string>
    <string name="text_select_icon">아이콘 선택</string>
    <string name="text_active">완료</string>

</resources>