<?xml version="1.0" encoding="utf-8"?><!-- Bottom Sheet를 이용하기 위해 CoordinatorLayout을 선언 -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.save.SaveFragment">

        <!-- Activity Main Content -->

        <!-- Persistent Bottom Sheet -->
        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_bottom_sheet"
            android:orientation="vertical"
            android:padding="20dp"
            app:behavior_hideable="true"
            app:behavior_peekHeight="250dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <!-- persistent bottom sheet의 Content -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_bottom_sheet_handlebar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_group_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_text_group"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/ib_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_outline_edit_24"
                    android:contentDescription="@string/title_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/effect_new_group_btn"
                    android:text="@string/add_text"
                    android:textColor="#4F81FF"
                    android:windowSoftInputMode="adjustPan" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/save_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                tools:listitem="@layout/save_item" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>