<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="10sp"
    android:paddingTop="10sp"
    android:paddingEnd="10sp"
    tools:context=".fragment.save.SaveAddFragment">

    <TextView
        android:id="@+id/tv_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/add_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/et_add_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_close_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_add_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_add_title" />

    <EditText
        android:id="@+id/et_add_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/add_title_text_hint"
        android:textColorHint="#8F8F8F"
        app:layout_constraintBottom_toTopOf="@id/et_add_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_title" />

    <EditText
        android:id="@+id/et_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/add_title_text_hint"
        android:textColorHint="#8F8F8F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_group" />


    <TextView
        android:id="@+id/tv_select_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_select_icon"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_add_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/save_add_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_icon"
        tools:listitem="@layout/icon_list" />


    <!--    <RadioGroup-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_select_icon">-->


    <!--        <ImageView-->
    <!--            android:id="@+id/iv_star"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_star" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_heart"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_heart" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_flash"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_flash" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ic_check"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_check" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ic_eye"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_eye" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/ic_thumb_up"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_thumb_up" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_smile"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_smile" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_diamond"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_diamond" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_square"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_square" />-->

    <!--        <ImageView-->
    <!--            android:id="@+id/iv_flower"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:background="@drawable/ic_icon_flower" />-->

    <!--    </RadioGroup>-->


</androidx.constraintlayout.widget.ConstraintLayout>